[tool.poetry]
name = "ProjetosAnalise"
version = "0.1.0"
description = ""
authors = ["Herik <hherik96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
matplotlib = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
